# proposal-assistant

./: .env.example  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
config/: proposal_template_spec.json
docs/: prd.md  project-context.md  technical-design.md
src/proposal_assistant/: __init__.py  config.py  main.py  status.py
src/proposal_assistant/docs/: __init__.py  client.py  deal_analysis.py
src/proposal_assistant/drive/: __init__.py  client.py  folders.py  permissions.py
src/proposal_assistant/llm/: __init__.py  client.py  context_builder.py
src/proposal_assistant/slack/: __init__.py  handlers.py  messages.py
src/proposal_assistant/slides/: __init__.py  client.py  proposal_deck.py
src/proposal_assistant/state/: __init__.py  machine.py  models.py  storage.py
src/proposal_assistant/utils/: __init__.py  doc_parser.py  document_parser.py  parsing.py  validation.py
tests/e2e/: __init__.py  test_happy_path.py
tests/integration/: test_full_flow.py
tests/unit/: test_chunking.py  test_cloud_fallback.py  test_config.py  test_context_builder.py  test_deal_analysis.py  test_dm_support.py  test_doc_parser.py  test_docs_client.py  test_document_parser.py  test_drive_client.py  test_drive_folders.py  test_drive_permissions.py  test_llm_client.py  test_main.py  test_multi_file.py  test_parsing.py  test_proposal_deck_prompts.py  test_regeneration.py  test_slack_handlers.py  test_slack_messages.py  test_slides_client.py  test_state_machine.py  test_state_storage.py  test_updated_doc.py  test_validation.py  test_web_fetcher.py
(+9 files in other folders)
