[project]
name = "proposal-assistant"
version = "0.1.0"
description = "Proposal Assistant Slack Bot for Renessai"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proposal_assistant"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
